# rdm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  action.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/skills/backlog/: SKILL.md
.claude/skills/story-audit/: SKILL.md
.claude/skills/test-faithfulness/: SKILL.md
.claude/skills/traceable-change/: SKILL.md
.claude/skills/usability-persona/: SKILL.md
.githooks/: README.md  pre-commit
.github/: dependabot.yml
.github/rulesets/: controlled-record.json
.github/workflows/: design-controls.yml  docker-publish.yml  docs.yml  pdfs.yml  test-pdf-generation.yml  test-vitalpulse-example.yml  tests.yml
backlog/: config.yml
backlog/archive/tasks/: rdm-001 - Fix-extract_data-import-bug-in-push-path.md  rdm-001 - Verify-and-stabilize-GitHub-Project-Sync.md  rdm-001.01 - Fix-known-bugs-in-sync.py.md  rdm-001.02 - Add-unit-tests-for-sync-module.md  rdm-001.03 - Add-integration-tests-for-GitHub-sync.md  rdm-002 - Unit-tests-for-DuckDB-schema-initialization.md  rdm-003 - Unit-tests-for-PR-pull-logic.md  rdm-004 - Unit-tests-for-GraphQL-helper.md  rdm-005 - Unit-tests-for-GitHub-Projects-v2-creation.md  rdm-006 - Unit-tests-for-push-features-as-issues.md  rdm-007 - Unit-tests-for-push-stories-for-feature.md  rdm-008 - Unit-tests-for-CLI-entry-point-pm_sync_command.md  rdm-009 - Integration-tests-with-real-GitHub-API.md  rdm-010 - Fix-hardcoded-master-branch-reference.md
backlog/milestones/: m-1 - GitHub Project Sync Verification.md
backlog/tasks/: rdm-001 - Sync-Backlog.md-tasks-to-GitHub-Issues.md  rdm-002 - Sync-Backlog.md-milestones-to-GitHub-Projects-and-Milestones.md  rdm-003 - Sync-GitHub-PRs-and-Issues-back-to-DuckDB-for-traceability.md
contrib/: agent-bootstrap.sh
contrib/hooks/: guard_design_controls.py
dhf/: AGENT_WORKFLOW.md  README.md  config.yml
dhf/documents/: architecture.md  design_input.md  design_review.md  document_control.md  traceability_matrix.md  verification_and_validation_plan.md
dhf/documents/design/: gap_analysis.md  gating.md  ingestion.md  record.md  rendering.md  scaffolding.md  story_audit.md  validation.md  verification.md
dhf/documents/sdd/: gating.md  record.md  rendering.md  validation.md  verification.md
dhf/faithfulness/: DI-1-faithfulness.json  DI-10-faithfulness.json  DI-11-faithfulness.json  DI-12-faithfulness.json  DI-13-faithfulness.json  DI-14-faithfulness.json  DI-15-faithfulness.json  DI-16-faithfulness.json  DI-17-faithfulness.json  DI-18-faithfulness.json  DI-19-faithfulness.json  DI-2-faithfulness.json  DI-20-faithfulness.json  DI-21-faithfulness.json  DI-22-faithfulness.json  DI-23-faithfulness.json  DI-24-faithfulness.json  DI-25-faithfulness.json  DI-26-faithfulness.json  DI-27-faithfulness.json  DI-28-faithfulness.json  DI-29-faithfulness.json  DI-3-faithfulness.json  DI-30-faithfulness.json  DI-31-faithfulness.json  DI-32-faithfulness.json  DI-33-faithfulness.json  DI-34-faithfulness.json  DI-4-faithfulness.json  DI-5-faithfulness.json  DI-6-faithfulness.json  DI-7-faithfulness.json  DI-8-faithfulness.json  DI-9-faithfulness.json
docs/: HISTORY.md  adr-0001-bounded-context-user-needs.md  agent-workflow.md  ai-persona-usability-validation.md  authoring.md  cli.md  design-controls.md  document-control.md  example-vitalpulse-decomposition.md  example-vitalview-decomposition.md  gap-analysis.md  index.md  installation.md  plan-vs-record.md  quickstart-existing-repo.md  quickstart-new-project.md  record-first-architecture.md  reference.md
docs/_hooks/: evidence.py
examples/github-document-control/: README.md  config.yml  setup.sh
examples/github-document-control/checklists/: part11_document_control.txt
examples/github-document-control/data/: dmr.yml  history.yml
examples/github-document-control/documents/: device_master_record_index.md  document_control_procedure.md
examples/github-document-control/github/: CODEOWNERS  settings.json
examples/vitalpulse-backlog/: config.yml
examples/vitalpulse-backlog/decisions/: decision-001 - RTOS-Selection-FreeRTOS.md
examples/vitalpulse-backlog/docs/: Dockerfile  architecture.md  config.yml  product_needs.yml  risk_management_report.md  software_requirements_specification.md  verification_and_validation_plan.md
examples/vitalpulse-backlog/milestones/: m-1 - Core-Sensor-Platform.md
examples/vitalpulse-backlog/tasks/: vp-001 - Firmware-Architecture-RTOS.md  vp-001.01 - FreeRTOS-Kernel-Config.md  vp-001.02 - Task-Priority-Scheme.md  vp-001.03 - Inter-Task-Messaging.md  vp-002 - SpO2-Pulse-Oximetry.md  vp-002.01 - AFE4490-Sensor-Driver.md  vp-002.02 - LED-Drive-Current.md  (+1 more)
examples/vitalview-samd/: README.md
rdm/: adopt.py  gaps.py  hooks.py  init.py  main.py  render.py  version.py
rdm/checklists/: part11_document_control.txt
rdm/hook_files/: pre-commit
rdm/init_files/: AGENTS.md  Dockerfile  Makefile  docker-compose.yml  pandoc_pdf.yml  template.typ
rdm/project_management/: github.py  sync.py
rdm/record/: __init__.py  allure.py  bundle.py  dmr.py  faithfulness.py  persona.py  persona_cmd.py  reconcile.py  sdd.py  validation.py  verify.py
rdm/story_audit/: __init__.py  audit.py  backlog_parser.py  backlog_schema.py  backlog_validate.py  check_ids.py  design_gate.py  mutation.py  new_input.py  schema.py  schema_docs.py  story_init.py  sync.py  validate.py
scripts/: agent-bootstrap.sh  apply-repo-controls.sh
tests/: allure_ingest_test.py  backlog_sync_test.py  backlog_validate_test.py  design_gate_test.py  faithfulness_test.py  gaps_test.py  hook_test.py  install_hooks_test.py  persona_ingest_test.py  pre_commit_hook_test.py  provenance_test.py  reconcile_test.py  release_gate_test.py  render_test.py  sdd_discovery_test.py  story_audit_test.py  util.py  verify_render_test.py
tests/acceptance/: test_faithfulness_gate.py  test_gap_analysis.py  test_gating.py  test_ingestion.py  test_mutation.py  test_record.py  test_rendering.py  test_scaffolding.py  test_story_audit.py  test_trace.py  test_user_needs.py  test_validation.py  test_verdict.py  test_verification.py
(+60 files in other folders)
