[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdm"
version = "1.0.0"
description = "Regulatory Documentation Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Innolitics, LLC", email = "info@innolitics.com"}
]
keywords = ["regulatory", "documentation", "medical", "iec62304", "iec82304", "iso14971", "510k"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=2.7",
    "pyyaml",
    "gitpython"
]

[project.optional-dependencies]
github = ["pygithub"]
dev = [
    "pytest",
    "ruff",
    "check-manifest",
    "sphinx",
    "sphinx-autobuild",
    "mock",
    "docutils",
    "coverage"
]

[project.scripts]
rdm = "rdm.main:main"

[project.urls]
Homepage = "https://github.com/scope-impact/rdm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rdm*"]
exclude = ["contrib*", "docs*", "tests*"]

[tool.setuptools.package-data]
rdm = [
    "base/*",
    "checklists/*",
    "init_files/.gitignore",
    "init_files/*",
    "init_files/data/*",
    "init_files/images/*",
    "init_files/images/uimockups/*",
    "init_files/documents/*",
    "init_files/documents/510k/*",
    "hook_files/*"
]

[tool.ruff]
line-length = 120
exclude = [".tox", "*.egg", "build", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.bdist_wheel]
universal = true
