[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rdm"
version = "1.2.0"
description = "Regulatory Documentation Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Innolitics, LLC", email = "info@innolitics.com"}
]
keywords = ["regulatory", "documentation", "medical", "iec62304", "iec82304", "iso14971", "510k"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "gitpython==3.1.46"
]

[project.optional-dependencies]
github = ["pygithub==2.8.1"]
story-audit = ["pydantic==2.12.5", "duckdb==1.4.3"]
analytics = ["duckdb==1.4.3"]
# Playwright for the usability-persona skill (AI-persona usability validation).
# Browsers are provided by the environment; if the preinstalled browser version
# differs, launch with executable_path (see examples/.../app/run_persona_demo.py).
validation = ["playwright==1.60.0"]
# Project-management pipeline (Backlog.md -> GitHub Issues/Projects, DuckDB
# analytics). This is an OPTIONAL, detachable layer that operates on PLANNING
# artifacts, not the system of record (SDD + Allure + git). RDM's record/render
# core does not require it. See docs/plan-vs-record.md.
plan = ["rdm[github]", "rdm[analytics]", "rdm[story-audit]"]
# Documentation site (Markdown prose under docs/ + an API reference generated
# from the source docstrings via mkdocstrings). Build with:
#   uv run --extra docs mkdocs build      # -> site/ (gitignored)
#   uv run --extra docs mkdocs serve      # live preview
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.21",
    "mkdocstrings[python]==0.30.1",
    "ruff==0.14.13",  # mkdocstrings uses it to format rendered signatures
]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.13",
    "check-manifest==0.51",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.21",
    "mkdocstrings[python]==0.30.1",
    "mock==5.2.0",
    "docutils==0.21.2",
    "coverage==7.13.1",
    "pydantic==2.12.5",
    "duckdb==1.4.3",
    "playwright==1.60.0",
    "allure-pytest==2.16.0"
]

[project.scripts]
rdm = "rdm.main:main"

[project.urls]
Homepage = "https://github.com/scope-impact/rdm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rdm*", "rdm.story_audit*"]
exclude = ["contrib*", "docs*", "tests*"]

[tool.setuptools.package-data]
rdm = [
    "base/*",
    "checklists/*",
    "init_files/.gitignore",
    "init_files/*",
    "init_files/data/*",
    "init_files/images/*",
    "init_files/images/uimockups/*",
    "init_files/documents/*",
    "init_files/documents/510k/*",
    "hook_files/*",
    "adopt_files/.claude/*",
    "adopt_files/.github/workflows/*",
    "adopt_files/.githooks/*",
    "adopt_files/dhf/*",
    "adopt_files/dhf/documents/*",
    "adopt_files/dhf/documents/design/*",
    "adopt_files/scripts/*"
]

[tool.ruff]
line-length = 120
exclude = [".tox", "*.egg", "build", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.bdist_wheel]
universal = true
